# opengl-playground

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
shaders/: vertex_shader.glsl
src/: CMakeLists.txt  Camera2D.h  Entity.h  Shader.h  TextureRenderer.h  main.cpp
